# journal-analyzer

./: .cursorrules  .replit  README.md  alembic.ini  masterplan.md  package-lock.json  package.json  project-structure.md  pyproject.toml  replit.nix  requirements.txt  setup.py
backend/: main.py
backend/app/: main.py
backend/app/api/endpoints/: upload.py
backend/app/core/: config.py
backend/app/db/: base_class.py  crud.py  init_db.py
backend/app/models/: database.py  journal.py  validation.py
backend/app/services/: analysis_service.py  comparative_service.py  data_cleaner.py  data_validator.py  db_operations.py  entry_parser.py  growth_service.py  hybrid_search_service.py  journal_service.py  langchain_service.py  openai_service.py  pdf_processor.py  pdf_service.py  retrieval_service.py  status_manager.py  storage_service.py  validation_service.py  visualization_service.py  writing_analysis_service.py
backend/app/utils/: indexing.py  ranking.py  security.py  text_cleaner.py  vector_utils.py
database/: init_db.py  models.py  vector_ops.py
docs/technical/: processing-pipeline.md  schema.md
frontend/: next.config.js  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/components/: UploadForm.tsx
frontend/src/features/comparative-analysis/components/: SeasonalPatterns.tsx  YearComparison.tsx
frontend/src/lib/: api.ts
scripts/: monitor_processing.py  reset_db.py  setup_db.py  upload_pdfs.py  verify_processing.py
setup/: setup-replit.sh
tests/: test_db_setup.py  test_pgvector.py
(+14 files in other folders)
