[tool.poetry]
name = "journal-analyzer"
version = "0.1.0"
description = "A web application for analyzing personal journal entries"
authors = ["Ash Duong <anhdduong2012@gmail.com>"]

[tool.poetry.packages]
packages = [
    { include = "journal_analyzer" },
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
langchain = "^0.0.330"
openai = "^1.3.0"
pandas = "^2.1.3"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
pypdf2 = "^3.0.1"
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
pgvector = "^0.2.3"
python-dotenv = "^1.0.0"
pydantic = "^2.5.1"
textstat = "^0.7.3"
wordcloud = "^1.9.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 